<resources>
    <string name="app_name">Remster</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <string name="log_in">Log In</string>
    <string name="log_in_trouble">Having trouble logging in?</string>

    <string name="sign_up_hint">Not a member yet? Sign Up</string>
    <string name="sign_up">Sign Up</string>

    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>

    <string name="log_in_hint">Already a member? Log In</string>

    <string name="search_hint">Search a place...</string>
    <string name="settings_activity_title">SETTINGS</string>
    <string name="settings_account_title">ACCOUNT</string>
    <string name="settings_general_title">GENERAL</string>
    <string name="change_profile_photo">Change Photo</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_posts_string">Oops! You haven\'t posted anything yet!</string>
</resources>
