<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/landingBackground"
    tools:context="dev.io.remster.LandingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginLeft="108dp"
        android:layout_marginStart="108dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="#8e8e8e"
        android:textStyle="normal"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textCapSentences|textNoSuggestions"
        android:background="@drawable/landing_edittext_background"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:hint="@string/first_name_hint"
        android:textColor="@android:color/black"
        android:textColorHint="#969696"
        android:textSize="11sp"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textCapSentences|textNoSuggestions"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name_hint"
        android:textColor="@android:color/black"
        android:textColorHint="#969696"
        android:textSize="11sp"
        android:background="@drawable/landing_edittext_background"
        android:layout_below="@+id/firstNameEditText"
        android:layout_alignLeft="@+id/firstNameEditText"
        android:layout_alignStart="@+id/firstNameEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:background="@drawable/landing_edittext_background"
        android:hint="@string/email_hint"
        android:textColor="@android:color/black"
        android:textColorHint="#969696"
        android:textSize="11sp"
        android:layout_below="@+id/lastNameEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:inputType="textPassword|textNoSuggestions"
        android:layout_below="@+id/emailEditText"
        android:layout_alignLeft="@+id/emailEditText"
        android:background="@drawable/landing_edittext_background"
        android:layout_alignStart="@+id/emailEditText"
        android:hint="@string/password_hint"
        android:textColor="@android:color/black"
        android:textColorHint="#969696"
        android:textSize="11sp"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:text="@string/sign_up"
        android:layout_marginTop="10dp"
        android:textSize="11sp"
        android:height="10dp"
        android:background="@drawable/login_button_background"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText" />

    <TextView
        android:id="@+id/logInHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="11sp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/log_in_hint"
        android:layout_below="@+id/signUpBtn"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/explore_city"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/logInHint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/map"
        android:layout_alignTop="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/photo"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:layout_alignTop="@+id/imageView4"
        android:layout_toRightOf="@+id/appTitle"
        android:layout_toEndOf="@+id/appTitle" />

    <TextView
        android:id="@+id/exploreLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        android:text="EXPLORE"
        android:layout_marginRight="7dp"
        android:layout_marginEnd="7dp"
        android:layout_below="@+id/imageView4"
        android:layout_toLeftOf="@+id/signUpBtn"
        android:layout_toStartOf="@+id/signUpBtn" />

    <TextView
        android:id="@+id/locateLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        android:text="LOCATE" />

    <TextView
        android:id="@+id/photoLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        android:text="CLICK"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/imageView5"
        android:layout_toRightOf="@+id/signUpBtn"
        android:layout_toEndOf="@+id/signUpBtn" />

</RelativeLayout>
