<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    tools:context="dev.io.remster.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:minHeight="50dp"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_black_36dp" />

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_activity_title"
        android:layout_alignTop="@+id/backBtn"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_marginTop="7dp" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_below="@id/toolbar">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/accountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_account_title"
            android:textColor="#797979"
            android:layout_margin="5dp"
            android:textStyle="normal|bold"
            android:textSize="11sp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountTitle"
            app:cardBackgroundColor="@android:color/white"
            android:id="@+id/cardView1">


            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="12sp"
                android:text="Change Password" />


        </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/generalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_general_title"
            android:textColor="#797979"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:textStyle="normal|bold"
            android:layout_below="@id/cardView1"
            android:textSize="11sp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/generalTitle"
            app:cardBackgroundColor="@android:color/white"
            android:id="@+id/cardView2">


            <TextView
                android:id="@+id/homeLocation"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:text="Home Location" />

            <TextView
                android:id="@+id/changeProfilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="5dp"
                android:text="@string/change_profile_photo" />

            <ImageView
                android:id="@+id/profilePhoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:layout_marginRight="5dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/logOutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginTop="75dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="12sp"
                android:text="@string/log_out" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>
</RelativeLayout>
